cabal-version: 2.4
name: sridca
version: 0.1.0.0
license: BSD-3-Clause
maintainer: srid@srid.ca
author: Sridhar Ratnakumar
category: Web

executable sridca
  main-is: Main.hs
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
  build-depends:
    base,
    aeson,
    clay,
    dhall,
    lucid,
    path,
    rib ^>=0.8,
    shake,
    text,
    neuron,
    relude,
    pandoc,
    modern-uri
